Fix: update site configuration to use 'title' instead of 'name' and include author in blog post metadata

--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -13,14 +13,7 @@ interface Props {
 }
 
 const { post } = Astro.props;
-const {
-  title,
-  description,
-  date,
-  // author,
-  thumbnail,
-  tags,
-} = post.data;
+const { title, description, date, author, thumbnail, tags } = post.data;
 const readingTime = calculateReadingTime(post.body!);
 
 // Generate OG image URL
@@ -44,7 +37,7 @@ const readableDate = date.toLocaleDateString('en-us', {
   schema={{
     type: 'BlogPosting',
     date,
-    // author,
+    author,
     tags,
   }}
 >
