--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { Image } from 'astro:assets';
 import WavingHand from '@/assets/waving-hand.webp';
 ---
 
-<Layout title={siteConfig.name} description={siteConfig.description}>
+<Layout title={siteConfig.title} description={siteConfig.description}>
   <section class='items-starts container flex h-full flex-col justify-center gap-y-4 pt-4'>
     <div class='flex items-center gap-x-2 text-5xl font-extrabold'>
       <span>Hello World</span>
