--- a/src/components/base-head.astro
+++ b/src/components/base-head.astro
@@ -36,7 +36,7 @@ const {
   charset = 'UTF-8',
   languageAlternates = [],
   locale = siteConfig.defaultLocale,
-  siteName = siteConfig.name,
+  siteName = siteConfig.title,
   twitterCreator,
   twitterSite,
   schema,
