--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -249,8 +249,8 @@ const funFacts = [
             rel='noopener noreferrer'
             class='text-secondary font-medium underline'
           >
-            GitHub
-          </a>.
+            GitHub</a
+          >.
         </p>
         <div class='flex items-center gap-2'>
           <Button href='mailto:hello@aleksa.codes' variant='ghost' size='sm'>
