Fix: update about section to reflect current status in Computer Science degree

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -173,9 +173,11 @@ const funFacts = [
         </p>
 
         <p>
-          After completing my <span class='highlight'>Computer Science degree at Singidunum University</span>, I've
-          dedicated myself to mastering modern web development and creating solutions that make a difference. From
-          browser extensions to full-stack applications, I approach each project as an opportunity to innovate and grow.
+          Currently in the final stages of my <span class='highlight'
+            >Computer Science degree at Singidunum University</span
+          >, working on my thesis, I've dedicated myself to mastering modern web development and creating solutions that
+          make a difference. From browser extensions to full-stack applications, I approach each project as an
+          opportunity to innovate and grow.
         </p>
 
         <p>
