--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -244,24 +244,17 @@ const funFacts = [
       <div class='from-secondary/20 to-warning/20 space-y-4 rounded-lg bg-gradient-to-r p-6 text-lg'>
         <p>
           I'm always open to discussing new projects, opportunities, or just having a chat about web development. Feel
-          free to check out my <a href='/projects' class='text-secondary font-medium underline'>projects</a> or connect with
-          me on <a
-            href='https://github.com/aleksa-codes'
-            target='_blank'
-            rel='noopener noreferrer'
-            class='text-secondary font-medium underline'
-          >
-            GitHub</a
-          >.
+          free to check out my <a href='/projects' class='text-secondary font-medium underline'>projects</a> or head over
+          to the <a href='/contact' class='text-secondary font-medium underline'> contact page</a> to get in touch.
         </p>
         <div class='flex items-center gap-2'>
-          <Button href='mailto:hello@aleksa.codes' variant='ghost' size='sm'>
+          <Button href='mailto:hello@aleksa.codes' variant='outline' size='sm'>
             <Icon name='lucide:mail' />
-            Email me
+            Email
           </Button>
           <Button
             href='https://discordapp.com/users/1078249969775038514'
-            variant='ghost'
+            variant='outline'
             size='sm'
             target='_blank'
             rel='noopener noreferrer'
