--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -27,18 +27,19 @@ import WinterAvatar from '@/assets/WinterAvatar.svg';
           >
         </p>
         <div class='flex items-center justify-center gap-2 md:justify-start'>
-          <Button href='mailto:hello@aleksa.codes' variant='ghost' size='icon' aria-label='Email'>
+          <Button href='mailto:hello@aleksa.codes' variant='outline' aria-label='Email'>
             <Icon name='lucide:mail' />
+            Email
           </Button>
           <Button
             href='https://discordapp.com/users/1078249969775038514'
-            variant='ghost'
-            size='icon'
+            variant='outline'
             target='_blank'
             rel='noopener noreferrer'
             aria-label='Discord'
           >
             <Icon name='simple-icons:discord' />
+            Discord
           </Button>
         </div>
       </div>
