--- a/src/layouts/blog-list-layout.astro
+++ b/src/layouts/blog-list-layout.astro
@@ -54,6 +54,7 @@ const postsWithReadTime = page.data.map((post) => ({
                       alt={post.data.title}
                       format='webp'
                       quality='max'
+                      layout={'full-width'}
                       class='size-full object-cover transition-transform duration-300 group-hover:scale-105'
                     />
                   </div>
