--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -145,7 +145,7 @@ const isCurrentPage = (href: string) => {
         </div>
 
         <!-- Contact Button (Desktop) -->
-        <Button href='/contact' variant='secondary' class='hidden px-8 lg:inline-flex'> Contact </Button>
+        <Button href='/contact/' variant='secondary' class='hidden px-8 lg:inline-flex'> Contact </Button>
 
         <!-- Mobile Menu Trigger -->
         <Button
@@ -300,7 +300,7 @@ const isCurrentPage = (href: string) => {
         }
       </div>
       <!-- Mobile CTA Button -->
-      <Button href='/contact' variant='secondary' class='w-full'>Contact</Button>
+      <Button href='/contact/' variant='secondary' class='w-full'>Contact</Button>
     </div>
   </div>
 </div>
