--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -86,7 +86,7 @@ const readableDate = date.toLocaleDateString('en-us', {
         tags?.length > 0 && (
           <div class='mt-8 flex flex-wrap gap-2'>
             {tags.map((tag) => (
-              <Badge as='a' href={`/blog/${tagToSlug(tag)}`}>
+              <Badge as='a' href={`/blog/${tagToSlug(tag)}/`}>
                 {tag}
               </Badge>
             ))}
