--- a/src/layouts/blog-list-layout.astro
+++ b/src/layouts/blog-list-layout.astro
@@ -61,7 +61,7 @@ const postsWithReadTime = page.data.map((post) => ({
                 )}
                 <div class='space-y-4 p-6'>
                   <h2 class='text-2xl font-bold'>
-                    <a href={`/blog/${post.id}`} class='text-base-content hover:text-primary transition-colors'>
+                    <a href={`/blog/${post.id}/`} class='text-base-content hover:text-primary transition-colors'>
                       {post.data.title}
                     </a>
                   </h2>
@@ -86,7 +86,7 @@ const postsWithReadTime = page.data.map((post) => ({
                   {post.data.tags?.length > 0 && (
                     <div class='flex flex-wrap gap-2'>
                       {post.data.tags.map((tag) => (
-                        <Badge variant={'outline'} as='a' href={`/blog/${tagToSlug(tag)}`}>
+                        <Badge variant={'outline'} as='a' href={`/blog/${tagToSlug(tag)}/`}>
                           {tag}
                         </Badge>
                       ))}
@@ -124,7 +124,7 @@ const postsWithReadTime = page.data.map((post) => ({
             <div class='flex flex-wrap gap-2'>
               {
                 allTags.map((tag) => (
-                  <Badge variant={'outline'} as='a' href={`/blog/${tagToSlug(tag)}`}>
+                  <Badge variant={'outline'} as='a' href={`/blog/${tagToSlug(tag)}/`}>
                     {tag}
                   </Badge>
                 ))
