--- a/src/components/base-head.astro
+++ b/src/components/base-head.astro
@@ -46,11 +46,6 @@ const pageTitle = Astro.url.pathname === '/' ? siteName : `${siteName} | ${title
 const baseUrl = Astro.site ?? Astro.url;
 const defaultCanonicalUrl = new URL(Astro.url.pathname + Astro.url.search, baseUrl);
 
-// Helper function to find navigation item by path
-const findNavigationItem = (path: string) => {
-  return siteConfig.navigation.find((item) => item.href === path);
-};
-
 // Generate breadcrumb items for structured data
 const generateBreadcrumbList = () => {
   const pathSegments = Astro.url.pathname.split('/').filter(Boolean);
@@ -59,11 +54,14 @@ const generateBreadcrumbList = () => {
 
   pathSegments.forEach((segment) => {
     accumPath += `/${segment}`;
-    const navItem = findNavigationItem(accumPath);
-    const name = navItem ? navItem.label : segment.charAt(0).toUpperCase() + segment.slice(1).replace(/-/g, ' ');
+    const name = segment
+      .replace(/[-_]/g, ' ')
+      .split(' ')
+      .map((word) => word.charAt(0).toUpperCase() + word.slice(1))
+      .join(' ');
     items.push({
       name,
-      item: new URL(accumPath, baseUrl).toString(),
+      item: new URL(accumPath + '/', baseUrl).toString(),
     });
   });
 
