fix: update image component attribute for better loading performance

--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -67,8 +67,9 @@ const readableDate = date.toLocaleDateString('en-us', {
             <Image
               src={thumbnail}
               alt={title}
-              format='webp'
-              quality='max'
+              loading={'eager'}
+              format={'webp'}
+              quality={'max'}
               layout={'full-width'}
               class='aspect-video w-full rounded-md object-cover'
             />
