Refactor: replace unpic with astro native image components

--- a/src/layouts/blog-list-layout.astro
+++ b/src/layouts/blog-list-layout.astro
@@ -52,9 +52,8 @@ const postsWithReadTime = page.data.map((post) => ({
                     <Image
                       src={post.data.thumbnail}
                       alt={post.data.title}
-                      format='webp'
-                      quality='max'
-                      layout={'full-width'}
+                      format={'webp'}
+                      quality={'max'}
                       class='size-full object-cover transition-transform duration-300 group-hover:scale-105'
                     />
                   </div>
