--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -143,9 +143,8 @@ const projects = [
                     <Image
                       src={project.image}
                       alt={project.title}
-                      format={'avif'}
-                      quality='max'
-                      layout={'full-width'}
+                      format={'webp'}
+                      quality={'max'}
                       class='h-full w-full object-cover object-top transition duration-500 group-hover:scale-[1.02]'
                     />
                   )}
