Fix: update giscus theme to use preferred color scheme

--- a/src/layouts/blog-layout.astro
+++ b/src/layouts/blog-layout.astro
@@ -109,7 +109,7 @@ const readableDate = date.toLocaleDateString('en-us', {
           data-reactions-enabled='1'
           data-emit-metadata='0'
           data-input-position='top'
-          data-theme='dark'
+          data-theme='preferred_color_scheme'
           data-lang='en'
           crossorigin='anonymous'
           async></script>
